tests/textual/error/unBData.uplc
(program 0.0.0 [(builtin unBData) (con data { Integer 0 })])
